Fixed Some Alignment Issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   /*text-align: center;*/
   align-items: center;
-  justify-content: center;
+ /* justify-content: center;*/
   display: flex;
   flex-direction: column;
 }
